// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListPropertiesPanel existing list 1`] = `
<div
  className="panel panel-default domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded labkey-page-nav"
    id="list-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-status-icon"
    >
      <span
        className="fa fa-check-circle"
      />
    </span>
    <span
      className="domain-panel-title"
    >
      NIMHDemographics - List Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row margin-bottom"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing lists
            </a>
          </div>
        </div>
      </div>
    </div>
    <form>
      <div
        className="col-xs-12 col-md-7"
      >
        <div
          className="domain-field-section-heading"
        >
          Basic Properties
        </div>
        <div
          className="row margin-top"
        >
          <div
            className="col-xs-3 col-lg-2"
          >
            <span
              className="domain-no-wrap"
            >
              Name
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
               *
            </span>
          </div>
          <div
            className="col-xs-9 col-lg-8"
          >
            <input
              className="form-control"
              id="name"
              onChange={[Function]}
              placeholder="Enter a name for this list"
              type="text"
              value="NIMHDemographics"
            />
          </div>
        </div>
        <div
          className="row margin-top"
        >
          <div
            className="col-xs-3 col-lg-2"
          >
            <span
              className="domain-no-wrap"
            >
              Description
              
            </span>
          </div>
          <div
            className="col-xs-9 col-lg-8"
          >
            <textarea
              className="form-control"
              id="description"
              onChange={[Function]}
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-md-3"
      >
        <div
          className="domain-field-section-heading"
        >
          Allow these Actions
        </div>
        <div
          className="list__properties__allowable-actions"
        >
          <div
            className="list__properties__checkbox-row"
          >
            <div
              className="form-group"
            >
              <label>
                <input
                  checked={true}
                  onChange={[Function]}
                  type="checkbox"
                />
                Delete
              </label>
            </div>
          </div>
          <div
            className="list__properties__checkbox-row"
          >
            <div
              className="form-group"
            >
              <label>
                <input
                  checked={true}
                  onChange={[Function]}
                  type="checkbox"
                />
                Upload
              </label>
            </div>
          </div>
          <div
            className="list__properties__checkbox-row"
          >
            <div
              className="form-group"
            >
              <label>
                <input
                  checked={true}
                  onChange={[Function]}
                  type="checkbox"
                />
                Export & Print
              </label>
            </div>
          </div>
        </div>
      </div>
      <button
        className="domain-field-float-right btn btn-default"
        onClick={[Function]}
        type="button"
      >
        Advanced Settings
      </button>
    </form>
  </div>
</div>
`;

exports[`ListPropertiesPanel list with error 1`] = `
<div
  className="panel panel-default domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded labkey-page-nav"
    id="list-properties-hdr"
    onClick={[Function]}
  >
    <div
      className="overlay-trigger"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="label-help-target"
      >
        <span
          className="domain-panel-status-icon"
        >
          <span
            className="fa fa-exclamation-circle"
          />
        </span>
      </span>
    </div>
    <span
      className="domain-panel-title"
    >
      NIMHDemographics - List Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row margin-bottom"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing lists
            </a>
          </div>
        </div>
      </div>
    </div>
    <form>
      <div
        className="col-xs-12 col-md-7"
      >
        <div
          className="domain-field-section-heading"
        >
          Basic Properties
        </div>
        <div
          className="row margin-top"
        >
          <div
            className="col-xs-3 col-lg-2"
          >
            <span
              className="domain-no-wrap"
            >
              Name
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
               *
            </span>
          </div>
          <div
            className="col-xs-9 col-lg-8"
          >
            <input
              className="form-control"
              id="name"
              onChange={[Function]}
              placeholder="Enter a name for this list"
              type="text"
              value="NIMHDemographics"
            />
          </div>
        </div>
        <div
          className="row margin-top"
        >
          <div
            className="col-xs-3 col-lg-2"
          >
            <span
              className="domain-no-wrap"
            >
              Description
              
            </span>
          </div>
          <div
            className="col-xs-9 col-lg-8"
          >
            <textarea
              className="form-control"
              id="description"
              onChange={[Function]}
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-md-3"
      >
        <div
          className="domain-field-section-heading"
        >
          Allow these Actions
        </div>
        <div
          className="list__properties__allowable-actions"
        >
          <div
            className="list__properties__checkbox-row"
          >
            <div
              className="form-group"
            >
              <label>
                <input
                  checked={true}
                  onChange={[Function]}
                  type="checkbox"
                />
                Delete
              </label>
            </div>
          </div>
          <div
            className="list__properties__checkbox-row"
          >
            <div
              className="form-group"
            >
              <label>
                <input
                  checked={true}
                  onChange={[Function]}
                  type="checkbox"
                />
                Upload
              </label>
            </div>
          </div>
          <div
            className="list__properties__checkbox-row"
          >
            <div
              className="form-group"
            >
              <label>
                <input
                  checked={true}
                  onChange={[Function]}
                  type="checkbox"
                />
                Export & Print
              </label>
            </div>
          </div>
        </div>
      </div>
      <button
        className="domain-field-float-right btn btn-default"
        onClick={[Function]}
        type="button"
      >
        Advanced Settings
      </button>
    </form>
  </div>
</div>
`;

exports[`ListPropertiesPanel new list 1`] = `
<div
  className="panel panel-default domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded labkey-page-nav"
    id="list-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      List Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row margin-bottom"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createListOptions"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing lists
            </a>
          </div>
        </div>
      </div>
    </div>
    <form>
      <div
        className="col-xs-12 col-md-7"
      >
        <div
          className="domain-field-section-heading"
        >
          Basic Properties
        </div>
        <div
          className="row margin-top"
        >
          <div
            className="col-xs-3 col-lg-2"
          >
            <span
              className="domain-no-wrap"
            >
              Name
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
               *
            </span>
          </div>
          <div
            className="col-xs-9 col-lg-8"
          >
            <input
              className="form-control"
              id="name"
              onChange={[Function]}
              placeholder="Enter a name for this list"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="row margin-top"
        >
          <div
            className="col-xs-3 col-lg-2"
          >
            <span
              className="domain-no-wrap"
            >
              Description
              
            </span>
          </div>
          <div
            className="col-xs-9 col-lg-8"
          >
            <textarea
              className="form-control"
              id="description"
              onChange={[Function]}
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-md-3"
      >
        <div
          className="domain-field-section-heading"
        >
          Allow these Actions
        </div>
        <div
          className="list__properties__allowable-actions"
        >
          <div
            className="list__properties__checkbox-row"
          >
            <div
              className="form-group"
            >
              <label>
                <input
                  checked={true}
                  onChange={[Function]}
                  type="checkbox"
                />
                Delete
              </label>
            </div>
          </div>
          <div
            className="list__properties__checkbox-row"
          >
            <div
              className="form-group"
            >
              <label>
                <input
                  checked={true}
                  onChange={[Function]}
                  type="checkbox"
                />
                Upload
              </label>
            </div>
          </div>
          <div
            className="list__properties__checkbox-row"
          >
            <div
              className="form-group"
            >
              <label>
                <input
                  checked={true}
                  onChange={[Function]}
                  type="checkbox"
                />
                Export & Print
              </label>
            </div>
          </div>
        </div>
      </div>
      <button
        className="domain-field-float-right btn btn-default"
        onClick={[Function]}
        type="button"
      >
        Advanced Settings
      </button>
    </form>
  </div>
</div>
`;
